--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,96 +1,214 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Lato', sans-serif;
 }
 
-body{
-  height: 100vh;
+body {
+  overflow-x: hidden;
 }
 
-.container{
-  width: 1280px;
-  margin: 50px auto;
-}
 
-.header{
-  padding-left: 264px;
-  padding-top: 96px;
-  border-bottom: 8px solid hsla(0, 0%, 60%, 1);
-  padding-bottom: 64px;
-}
+/* Laptop Version */
 
-.huckleBerry{
-  font-size: 32px;
-  font-weight: 900;
-  line-height: 120%;
-  margin-bottom: 48px;
-  width: 180px;
-  height: 38px;
+@media only screen and (min-width: 769px) {
 
-}
+  body {
+    height: 100vh;
+  }
 
-span{
-  color: hsla(160, 100%, 30%, 1);
-  font-weight: bolder;
-}
+  .container {
+    width: 1280px;
+    margin: 50px auto;
+  }
 
-.headerText1, .headerText2{
-  font-size: 20px;
-  font-weight: bolder;
-  line-height: 150%;
-  width: 415px;
-}
+  .header {
+    padding-left: 264px;
+    padding-top: 96px;
+    border-bottom: 8px solid hsla(0, 0%, 60%, 1);
+    padding-bottom: 64px;
+  }
 
-.headerText2{
-  margin-top: 16px;
-}
+  .huckleBerry {
+    font-size: 32px;
+    font-weight: 900;
+    line-height: 120%;
+    margin-bottom: 48px;
+    width: 180px;
+    height: 38px;
 
-.main{
-  background-color: hsla(0, 0%, 40%, 1);
-  padding-left: 240px;
-  padding-right: 240px;
-  padding-top: 72px;
-  padding-bottom: 66px;
-}
+  }
 
-.card{
-  background-color: hsla(0, 0%, 100%, 1);
-  border-bottom: 8px solid hsla(0, 0%, 60%, 1);
-  width: 800px;
-  height: 312px;
-  padding-left: 24px;
-  padding-right: 24px;
-  padding-top: 8px;
-  padding-bottom: 24px;
-}
-
-.banner{
-  width: 398px;
-  height: 60px;
-  background-color: hsla(45, 100%, 50%, 1);
-  border-bottom: 8px solid hsla(45, 100%, 40%, 1);
-  padding-bottom: 15px;
-  padding-top: 16px;
-  padding-left: 32px;
-  padding-right: 32px;
-  line-height: 120%;
-  margin-bottom: 24px;
-  margin-left: -32px;
-
-  >p{
+  span {
+    color: hsla(160, 100%, 30%, 1);
     font-weight: 800;
-    font-size: 24px;
+  }
+
+  .headerText1,
+  .headerText2 {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 150%;
+    width: 415px;
+  }
+
+  .headerText2 {
+    margin-top: 16px;
+  }
+
+  .main {
+    background-color: hsla(0, 0%, 40%, 1);
+    padding-left: 240px;
+    padding-right: 240px;
+    padding-top: 72px;
+    padding-bottom: 66px;
+  }
+
+  .card {
+    background-color: hsla(0, 0%, 100%, 1);
+    border-bottom: 8px solid hsla(0, 0%, 60%, 1);
+    width: 800px;
+    height: 312px;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top: 8px;
+    padding-bottom: 24px;
+  }
+
+  .banner {
+    width: 398px;
+    height: 60px;
+    background-color: hsla(45, 100%, 50%, 1);
+    border-bottom: 8px solid hsla(45, 100%, 40%, 1);
+    padding-bottom: 15px;
+    padding-top: 16px;
+    padding-left: 32px;
+    padding-right: 32px;
+    line-height: 120%;
+    margin-bottom: 24px;
+    margin-left: -32px;
+
+    >p {
+      font-weight: 800;
+      font-size: 24px;
+    }
+  }
+
+  .cardText1,
+  .cardText2 {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 150%;
+  }
+
+  .cardText2 {
+    margin-top: 16px;
   }
 }
 
-.cardText1, .cardText2{
-  font-size: 20px;
-  font-weight: bolder;
-  line-height: 150%;
-}
 
-.cardText2{
-  margin-top: 16px;
+/* Tablet Version */
+
+@media only screen and (min-width: 426px) and (max-width: 768px) {
+
+  body {
+    height: 1024px;
+
+  }
+
+  .container {
+    width: 768px;
+    margin: 50px auto;
+  }
+
+  .header {
+    padding-left: 24px;
+    padding-top: 96px;
+    border-bottom: 8px solid hsla(0, 0%, 60%, 1);
+    padding-bottom: 64px;
+  }
+
+  .huckleBerry {
+    font-size: 32px;
+    font-weight: 900;
+    line-height: 120%;
+    margin-bottom: 48px;
+    width: 180px;
+    height: 38px;
+
+  }
+
+  span {
+    color: hsla(160, 100%, 30%, 1);
+    font-weight: 800;
+  }
+
+  .headerText1,
+  .headerText2 {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 150%;
+  }
+
+  .headerText1 {
+    width: 401px;
+  }
+
+  .headerText2 {
+    margin-top: 16px;
+    width: 405px;
+  }
+
+  .main {
+    background-color: hsla(0, 0%, 40%, 1);
+
+    height: 456px;
+    padding-top: 72px;
+    padding-bottom: 66px;
+    padding-left: -8px;
+  }
+
+  .card {
+    background-color: hsla(0, 0%, 100%, 1);
+    border-bottom: 8px solid hsla(0, 0%, 60%, 1);
+    width: 768px;
+    height: 312px;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top: 8px;
+    padding-bottom: 24px;
+
+  }
+
+  .banner {
+    width: 398px;
+    height: 60px;
+    background-color: hsla(45, 100%, 50%, 1);
+    border-bottom: 8px solid hsla(45, 100%, 40%, 1);
+    padding-bottom: 15px;
+    padding-top: 16px;
+    padding-left: 32px;
+    padding-right: 32px;
+    line-height: 120%;
+    margin-bottom: 24px;
+    margin-left: -32px;
+
+    >p {
+      font-weight: 800;
+      font-size: 24px;
+    }
+  }
+
+  .cardText1,
+  .cardText2 {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 150%;
+    width: 720px;
+  }
+
+  .cardText2 {
+    margin-top: 16px;
+  }
 }
