--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,11 +110,10 @@ body {
 
 /* Tablet Version */
 
-@media only screen and (min-width: 426px) and (max-width: 768px) {
+@media only screen and (min-width: 391px) and (max-width: 768px) {
 
   body {
     height: 1024px;
-
   }
 
   .container {
@@ -210,5 +209,110 @@ body {
 
   .cardText2 {
     margin-top: 16px;
+  }
+}
+
+
+/* Mobile Version */
+
+@media only screen and (max-width: 390px) {
+  body {
+    height: 844px;
+  }
+
+  .container {
+    width: 390px;
+    height: 844px;
+    margin: 50px auto;
+  }
+
+  .header {
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top: 96px;
+    border-bottom: 8px solid hsla(0, 0%, 60%, 1);
+    padding-bottom: 64px;
+    height: 382px;
+  }
+
+  .huckleBerry {
+    font-size: 32px;
+    font-weight: 900;
+    line-height: 120%;
+    margin-bottom: 48px;
+    width: 180px;
+    height: 38px;
+
+  }
+
+  span {
+    color: hsla(160, 100%, 30%, 1);
+    font-weight: 800;
+  }
+
+  .headerText1,
+  .headerText2 {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 150%;
+    width: 342px;
+  }
+
+  .headerText2 {
+    margin-top: 16px;
+  }
+
+  .main {
+    background-color: hsla(0, 0%, 40%, 1);
+    width: 390px;
+    height: 456px;
+    padding-top: 72px;
+    padding-bottom: 66px;
+    padding-left: 8px;
+  }
+
+  .card {
+    background-color: hsla(0, 0%, 100%, 1);
+    border-bottom: 8px solid hsla(0, 0%, 60%, 1);
+    width: 390px;
+    height: 496px;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top: 8px;
+    padding-bottom: 24px;
+    margin-left: -8px;
+    margin-bottom: -41px;
+  }
+
+  .banner {
+    width: 374px;
+    height: 82px;
+    background-color: hsla(45, 100%, 50%, 1);
+    border-bottom: 8px solid hsla(45, 100%, 40%, 1);
+    padding-bottom: 12px;
+    padding-top: 12px;
+    padding-left: 24px;
+    padding-right: 24px;
+    line-height: 120%;
+    margin-bottom: 30px;
+    margin-left: -24px;
+
+    >p {
+      font-weight: 800;
+      font-size: 24px;
+    }
+  }
+
+  .cardText1,
+  .cardText2 {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 150%;
+    width: 342px;
+  }
+
+  .cardText2 {
+    margin-top: 16px;
+    width: 343px;
   }
 }
