--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -309,10 +309,12 @@ body {
     font-weight: 500;
     line-height: 150%;
     width: 342px;
+    height: 240px;
   }
 
   .cardText2 {
     margin-top: 16px;
     width: 343px;
+    height: 120px;
   }
 }
